--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /Protocol.NATS/obj/Debug/netcoreapp2.1
 /Protocol.NATS/obj
 /HostApp/bin/Debug/netcoreapp2.1
+/.vs/moleculer-net/v15/Server/sqlite3
