--- a/src/Protocol.NATS/Protocol.NATS.csproj
+++ b/src/Protocol.NATS/Protocol.NATS.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Protocol.Abstractions\Protocol.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
