--- a/src/ServiceAction.Abstractions/ServiceAction.Abstractions.csproj
+++ b/src/ServiceAction.Abstractions/ServiceAction.Abstractions.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Protocol.Abstractions\Protocol.Abstractions.csproj" />
+  </ItemGroup>
+
 </Project>
